upisivanje proizvoda u galeriju iz baze podataka

--- a/MMarket/Web.config
+++ b/MMarket/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="MaritaMarketConnectionString" connectionString="DESKTOP-K1I0JMC\SQLEXPRESS;Initial Catalog=MaritaMarket;Integrated Security=True"
+    <add name="MaritaMarketConnectionString" connectionString="Data Source=DESKTOP-K1I0JMC\SQLEXPRESS;Initial Catalog=MaritaMarket;Integrated Security=True"
       providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
