--- a/MMarket/Web.config
+++ b/MMarket/Web.config
@@ -5,8 +5,10 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="MaritaMarketConnectionString" connectionString="DESKTOP-K1I0JMC\SQLEXPRESS;Initial Catalog=MaritaMarket;Integrated Security=True"
-      providerName="System.Data.SqlClient"/>
+    <!--<add name="MaritaMarketConnectionString" connectionString="DESKTOP-K1I0JMC\SQLEXPRESS;Initial Catalog=MaritaMarket;Integrated Security=True"
+      providerName="System.Data.SqlClient" />-->
+    <add name="MaritaMarketConnectionString" connectionString="Data Source=DESKTOP-FR7RPIJ\SQLEXPRESS;Initial Catalog=MaritaMarket;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
