--- a/MMarket/Web.config
+++ b/MMarket/Web.config
@@ -7,10 +7,11 @@
   <connectionStrings>
     <!--<add name="MaritaMarketConnectionString" connectionString="Data Source=DESKTOP-K1I0JMC\SQLEXPRESS;Initial Catalog=MaritaMarket;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
-    <add name="MaritaMarketConnectionString" connectionString="Data Source=DESKTOP-FR7RPIJ\SQLEXPRESS;Initial Catalog=MaritaMarket;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <!--<add name="MaritaMarketConnectionString" connectionString="Data Source=DESKTOP-AGVKO2V\SQLEXPRESS;Initial Catalog=MaritaMarket;Integrated Security=True"
+    <!--<add name="MaritaMarketConnectionString" connectionString="Data Source=DESKTOP-FR7RPIJ\SQLEXPRESS;Initial Catalog=MaritaMarket;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
+    <add name="MaritaMarketConnectionString" connectionString="Data Source=DESKTOP-AGVKO2V\SQLEXPRESS;Initial Catalog=MaritaMarket;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    
   </connectionStrings>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
