--- a/MMarket/MMarket.csproj
+++ b/MMarket/MMarket.csproj
@@ -71,10 +71,16 @@
   <ItemGroup>
     <Content Include="AdminPage.aspx" />
     <Content Include="CajeviKave.aspx" />
+    <Content Include="Cart.aspx" />
+    <Content Include="css\BadgeStyle.css" />
+    <Content Include="css\CartStyle.css" />
     <Content Include="css\MasterStyle.css" />
     <Content Include="css\LoginStyle.css" />
     <Content Include="Datulje.aspx" />
     <Content Include="home2.aspx" />
+    <Content Include="Images\add_to_cart_green.png" />
+    <Content Include="Images\add_to_cart_white.png" />
+    <Content Include="Images\cart.png" />
     <Content Include="Images\datulje.jpg" />
     <Content Include="Images\Logo.png" />
     <Content Include="Images\Oriental Background.jpg" />
@@ -82,7 +88,9 @@
     <Content Include="js\modal.js" />
     <Content Include="KonzerviranaHrana.aspx" />
     <Content Include="Kozmetika.aspx" />
+    <Content Include="Ostalo.aspx" />
     <Content Include="Pica.aspx" />
+    <Content Include="ProductDetails.aspx" />
     <Content Include="Scripts\scrip-1.0.js" />
     <Content Include="MyMaster.Master" />
     <Content Include="Sirevi.aspx" />
@@ -152,6 +160,13 @@
     <Compile Include="CajeviKave.aspx.designer.cs">
       <DependentUpon>CajeviKave.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Cart.aspx.cs">
+      <DependentUpon>Cart.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Cart.aspx.designer.cs">
+      <DependentUpon>Cart.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Datulje.aspx.cs">
       <DependentUpon>Datulje.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -201,12 +216,26 @@
     <Compile Include="MyMaster.Master.designer.cs">
       <DependentUpon>MyMaster.Master</DependentUpon>
     </Compile>
+    <Compile Include="Ostalo.aspx.cs">
+      <DependentUpon>Ostalo.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Ostalo.aspx.designer.cs">
+      <DependentUpon>Ostalo.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Pica.aspx.cs">
       <DependentUpon>Pica.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Pica.aspx.designer.cs">
       <DependentUpon>Pica.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ProductDetails.aspx.cs">
+      <DependentUpon>ProductDetails.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ProductDetails.aspx.designer.cs">
+      <DependentUpon>ProductDetails.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sirevi.aspx.cs">
