--- a/MMarket/MMarket.csproj
+++ b/MMarket/MMarket.csproj
@@ -77,9 +77,15 @@
     <Content Include="home2.aspx" />
     <Content Include="Images\datulje.jpg" />
     <Content Include="Images\kava.jpg" />
+    <Content Include="Images\konz.png" />
+    <Content Include="Images\kozm.jpg" />
     <Content Include="Images\Logo.png" />
     <Content Include="Images\Oriental Background.jpg" />
+    <Content Include="Images\sir.jpg" />
+    <Content Include="Images\slatko.jpg" />
     <Content Include="Images\zacini.jpg" />
+    <Content Include="Images\zamrznuto.jpg" />
+    <Content Include="Images\zitarice.jpg" />
     <Content Include="js\modal.js" />
     <Content Include="KonzerviranaHrana.aspx" />
     <Content Include="Kozmetika.aspx" />
