--- a/MMarket/MMarket.csproj
+++ b/MMarket/MMarket.csproj
@@ -78,23 +78,23 @@
     <Content Include="css\LoginStyle.css" />
     <Content Include="Datulje.aspx" />
     <Content Include="home2.aspx" />
-    <Content Include="Images\datulje.jpg" />
+    <Content Include="Images\categories\datulje.jpg" />
+    <Content Include="Images\categories\kava.jpg" />
+    <Content Include="Images\categories\konz.png" />
+    <Content Include="Images\categories\kozm.jpg" />
+    <Content Include="Images\categories\sir.jpg" />
+    <Content Include="Images\categories\slatko.jpg" />
+    <Content Include="Images\categories\zacini.JPG" />
+    <Content Include="Images\categories\zamrznuto.jpg" />
+    <Content Include="Images\categories\zitarice.jpg" />
     <Content Include="Images\icones\add_to_cart_blue.png" />
     <Content Include="Images\icones\add_to_cart_green.png" />
     <Content Include="Images\icones\add_to_cart_purple.png" />
     <Content Include="Images\icones\add_to_cart_white.png" />
     <Content Include="Images\icones\cart_blue.png" />
     <Content Include="Images\icones\cart_purple.png" />
-    <Content Include="Images\kava.jpg" />
-    <Content Include="Images\konz.png" />
-    <Content Include="Images\kozm.jpg" />
     <Content Include="Images\Logo.png" />
     <Content Include="Images\Oriental Background.jpg" />
-    <Content Include="Images\sir.jpg" />
-    <Content Include="Images\slatko.jpg" />
-    <Content Include="Images\zacini.jpg" />
-    <Content Include="Images\zamrznuto.jpg" />
-    <Content Include="Images\zitarice.jpg" />
     <Content Include="js\modal.js" />
     <Content Include="KonzerviranaHrana.aspx" />
     <Content Include="Kozmetika.aspx" />
