--- a/MMarket/Web.config
+++ b/MMarket/Web.config
@@ -7,17 +7,16 @@
   <connectionStrings>
     <!--<add name="MaritaMarketConnectionString" connectionString="Data Source=DESKTOP-K1I0JMC\SQLEXPRESS;Initial Catalog=MaritaMarket;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
-   <add name="MaritaMarketConnectionString" connectionString="Data Source=DESKTOP-FR7RPIJ\SQLEXPRESS;Initial Catalog=MaritaMarket;Integrated Security=True"
-      providerName="System.Data.SqlClient"/>
+   <add name="MaritaMarketConnectionString" connectionString="Data Source=DESKTOP-FR7RPIJ\SQLEXPRESS;Initial Catalog=MaritaMarket;Integrated Security=True" providerName="System.Data.SqlClient" />
    <!-- <add name="MaritaMarketConnectionString" connectionString="Data Source=DESKTOP-AGVKO2V\SQLEXPRESS;Initial Catalog=MaritaMarket;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
     
   </connectionStrings>
   <appSettings>
-    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.6.1"/>
-    <httpRuntime targetFramework="4.6.1"/>
+    <compilation debug="true" targetFramework="4.6.1" />
+    <httpRuntime targetFramework="4.6.1" />
   </system.web>
 </configuration>
