--- a/MMarket/Web.config
+++ b/MMarket/Web.config
@@ -5,10 +5,10 @@
   -->
 <configuration>
   <connectionStrings>
-    <!--<add name="MaritaMarketConnectionString" connectionString="Data Source=DESKTOP-K1I0JMC\SQLEXPRESS;Initial Catalog=MaritaMarket;Integrated Security=True"
-      providerName="System.Data.SqlClient" />-->
-   <add name="MaritaMarketConnectionString" connectionString="Data Source=DESKTOP-FR7RPIJ\SQLEXPRESS;Initial Catalog=MaritaMarket;Integrated Security=True"
-      providerName="System.Data.SqlClient"/>
+    <add name="MaritaMarketConnectionString" connectionString="Data Source=DESKTOP-K1I0JMC\SQLEXPRESS;Initial Catalog=MaritaMarket;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+  <!-- <add name="MaritaMarketConnectionString" connectionString="Data Source=DESKTOP-FR7RPIJ\SQLEXPRESS;Initial Catalog=MaritaMarket;Integrated Security=True"
+      providerName="System.Data.SqlClient"/>-->
    <!-- <add name="MaritaMarketConnectionString" connectionString="Data Source=DESKTOP-AGVKO2V\SQLEXPRESS;Initial Catalog=MaritaMarket;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
     
