--- a/MMarket/MMarket.csproj
+++ b/MMarket/MMarket.csproj
@@ -95,6 +95,7 @@
     <Content Include="Images\icones\cart_red.png" />
     <Content Include="Images\logo-nav1.jpg" />
     <Content Include="Images\Logo.png" />
+    <Content Include="Images\logo2%28png%29.png" />
     <Content Include="Images\Oriental Background.jpg" />
     <Content Include="js\modal.js" />
     <Content Include="KonzerviranaHrana.aspx" />
