--- a/MMarket/MMarket.csproj
+++ b/MMarket/MMarket.csproj
@@ -78,6 +78,7 @@
     <Content Include="home2.aspx" />
     <Content Include="Images\arap-logo.png" />
     <Content Include="Images\categories\datulje.jpg" />
+    <Content Include="Images\categories\hookah.jpg" />
     <Content Include="Images\categories\kava.jpg" />
     <Content Include="Images\categories\konz.png" />
     <Content Include="Images\categories\kozm.jpg" />
