--- a/MMarket/MMarket.csproj
+++ b/MMarket/MMarket.csproj
@@ -97,6 +97,7 @@
     <Content Include="Images\icones\cart_blue.png" />
     <Content Include="Images\icones\cart_purple.png" />
     <Content Include="Images\icones\cart_red.png" />
+    <Content Include="Images\icones\habibi_logo.png" />
     <Content Include="Images\logo-nav1.jpg" />
     <Content Include="Images\Logo.png" />
     <Content Include="Images\logo2%28png%29.png" />
