--- a/MMarket/packages.config
+++ b/MMarket/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="ImageProcessor" version="2.5.5" targetFramework="net461" />
+  <package id="iTextSharp" version="5.5.12" targetFramework="net461" />
   <package id="jQuery" version="3.2.1" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.3.2" targetFramework="net461" developmentDependency="true" />
 </packages>
