--- a/MMarket/MMarket.csproj
+++ b/MMarket/MMarket.csproj
@@ -111,7 +111,6 @@
     <Content Include="Payment.aspx" />
     <Content Include="Pica.aspx" />
     <Content Include="ProductDetails.aspx" />
-    <Content Include="pdf\a.pdf" />
     <None Include="Scripts\jquery-3.2.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.2.1.js" />
     <Content Include="Scripts\jquery-3.2.1.min.js" />
@@ -299,7 +298,9 @@
       <DependentUpon>Zitarice.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Narudzbe\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
