--- a/MMarket/MMarket.csproj
+++ b/MMarket/MMarket.csproj
@@ -106,7 +106,6 @@
     <Content Include="js\modal.js" />
     <Content Include="KonzerviranaHrana.aspx" />
     <Content Include="Kozmetika.aspx" />
-    <Content Include="Narudzbe\New Text Document.txt" />
     <Content Include="Order-Received.aspx" />
     <Content Include="orderreceived.aspx" />
     <Content Include="Ostalo.aspx" />
@@ -307,7 +306,9 @@
       <DependentUpon>Zitarice.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Narudzbe\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
